<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".category.CategoryActivity" android:id="@+id/constrainLayout"
        android:background="@color/colorPrimary">
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/category_icons" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp">

        <ImageView
                android:layout_width="@dimen/icon_category_width"
                android:layout_height="@dimen/icon_category_height" app:srcCompat="@drawable/icon_house"
                android:id="@+id/icon_home"
                android:contentDescription="@string/icon_house_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
                android:layout_width="@dimen/icon_category_width"
                android:layout_height="@dimen/icon_category_height" app:srcCompat="@drawable/icon_beer"
                android:id="@+id/icon_beer"
                android:contentDescription="@string/icon_beer_content"
                app:layout_constraintStart_toEndOf="@+id/icon_home"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/icon_home"
                app:layout_constraintTop_toTopOf="@+id/icon_home"/>
        <ImageView
                android:layout_width="@dimen/icon_category_width"
                android:layout_height="@dimen/icon_category_height" app:srcCompat="@drawable/icon_car"
                android:id="@+id/icon_car"
                android:contentDescription="@string/icon_car_content"
                app:layout_constraintStart_toEndOf="@+id/icon_beer"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/icon_beer"
                app:layout_constraintTop_toTopOf="@+id/icon_beer" app:layout_constraintVertical_bias="0.0"
        />
        <ImageView
                android:layout_width="@dimen/icon_category_width"
                android:layout_height="@dimen/icon_category_height" app:srcCompat="@drawable/icon_cart"
                android:id="@+id/icon_cart"
                android:contentDescription="@string/icon_cart_content"
                app:layout_constraintStart_toEndOf="@+id/icon_car"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/icon_car"
                app:layout_constraintTop_toTopOf="@+id/icon_car" app:layout_constraintVertical_bias="0.0"
        />

    </android.support.constraint.ConstraintLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/category_name_container"
            android:hint="@string/label_category_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/category_icons"
    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_name_hint" android:id="@+id/category_name_text"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/button_category_create_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_category_create"
            app:layout_constraintTop_toBottomOf="@+id/category_name_container" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>
</android.support.constraint.ConstraintLayout>